--- a/langsmith_simple_eval.ipynb
+++ b/langsmith_simple_eval.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluate a language model's performance on a dataset \n",
+    "## Evaluate a language model's performance on a dataset using Langsmith online visualization \n",
     "\n",
     "I have tried two methods and they both works. Feel free to try and compare two methods' efficiency.\n",
     "\n",
